{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 66,
  "lineage": "49b760a5-61f0-0414-7c51-bda48aeaf3af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:551085516078:security-group/sg-048e6ac4b42766f11",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01dcbbf548a63a90a"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0667566f547da1ebf"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "id": "sg-048e6ac4b42766f11",
            "ingress": [],
            "name": "backend",
            "name_prefix": "",
            "owner_id": "551085516078",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc0c8f2ef1a0a03f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:551085516078:security-group/sg-01dcbbf548a63a90a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01dcbbf548a63a90a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-048e6ac4b42766f11"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "database",
            "name_prefix": "",
            "owner_id": "551085516078",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc0c8f2ef1a0a03f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:551085516078:security-group/sg-0667566f547da1ebf",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0667566f547da1ebf",
            "ingress": [],
            "name": "frontend",
            "name_prefix": "",
            "owner_id": "551085516078",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc0c8f2ef1a0a03f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_backend_to_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 5432,
            "id": "sgrule-2121536415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01dcbbf548a63a90a",
            "security_group_rule_id": "sgr-02e1064c1ed41d24b",
            "self": false,
            "source_security_group_id": "sg-048e6ac4b42766f11",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.database_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_database_to_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 5432,
            "id": "sgrule-3246968587",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-048e6ac4b42766f11",
            "security_group_rule_id": "sgr-00ff4f20010a678b5",
            "self": false,
            "source_security_group_id": "sg-01dcbbf548a63a90a",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.database_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_frontend_to_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8000,
            "id": "sgrule-1382164755",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-048e6ac4b42766f11",
            "security_group_rule_id": "sgr-0a9e53de7e3c412ec",
            "self": false,
            "source_security_group_id": "sg-0667566f547da1ebf",
            "timeouts": null,
            "to_port": 8000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.frontend_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "souper_subnet_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:551085516078:subnet/subnet-0d0ca1cd0f78e40b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.32.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0ca1cd0f78e40b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551085516078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "souper-subnet-private-1"
            },
            "tags_all": {
              "Name": "souper-subnet-private-1"
            },
            "vpc_id": "vpc-0fc0c8f2ef1a0a03f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "souper_subnet_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:551085516078:subnet/subnet-0111f07fa496d15ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.32.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0111f07fa496d15ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "551085516078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "souper-subnet-private-2"
            },
            "tags_all": {
              "Name": "souper-subnet-private-2"
            },
            "vpc_id": "vpc-0fc0c8f2ef1a0a03f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "souper_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:551085516078:subnet/subnet-0e2b4e9a541fc177f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.32.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2b4e9a541fc177f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "551085516078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "souper-subnet-public-1"
            },
            "tags_all": {
              "Name": "souper-subnet-public-1"
            },
            "vpc_id": "vpc-0fc0c8f2ef1a0a03f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:551085516078:vpc/vpc-0fc0c8f2ef1a0a03f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-073f3144212170127",
            "default_route_table_id": "rtb-03c90911dbd122520",
            "default_security_group_id": "sg-0e2dc9bee157638df",
            "dhcp_options_id": "dopt-03f11659f1f1c8cd3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc0c8f2ef1a0a03f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c90911dbd122520",
            "owner_id": "551085516078",
            "tags": {
              "Name": "souper-vpc"
            },
            "tags_all": {
              "Name": "souper-vpc"
            }
          }
        }
      ]
    }
  ]
}